# Github_Hub_Repo_and_Markdown_HW

./: .env.example  README.md  init_db.py  pyproject.toml
db/: sample_queries.sql  schema.sql  seed.sql
docs/: architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
src/: __init__.py  models.py  repository.py  service.py  ui.py
src/steelworks/: models.py  repositories.py
tests/: __init__.py  conftest.py  test_models.py  test_repositories.py  test_service.py
