[tool.poetry]
name = "steelworks-operations"
version = "1.0.0"
description = "SteelWorks Operations Reporting Tool - Multi-department production, inspection, and shipment data aggregation"
authors = ["SteelWorks Operations Team <ops@steelworks.local>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
streamlit = "^1.28"
python-dotenv = "^1.0"
pandas = "^2.0"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
